# leaseq

./: .gitignore  Cargo.toml  README.md
crates/leaseq/: Cargo.toml
crates/leaseq-core/: Cargo.toml
crates/leaseq-core/src/: config.rs  fs.rs  lib.rs  models.rs
crates/leaseq-runner/: Cargo.toml
crates/leaseq-runner/src/: main.rs
crates/leaseq/src/: main.rs
crates/leaseq/src/commands/: add.rs  cancel.rs  daemon.rs  follow.rs  lease.rs  logs.rs  mod.rs  run.rs  shell.rs  status.rs  submit.rs  tasks.rs
crates/leaseq/src/tui/: app.rs  mod.rs  ui.rs
crates/leaseq/tests/: design_flaws_test.rs  failure_scenarios_test.rs  reporting_test.rs  slurm_integration_test.rs  tui_integration_test.rs
docs/: design.md  impl.md  tui.md
