[package]
name = "leaseq-core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "formatting", "local-offset", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
directories = "5.0"
tracing = "0.1"
walkdir = "2"
hostname = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"