[package]
name = "leaseq"
version = "0.1.0"
edition = "2021"

[dependencies]
leaseq-core = { path = "../leaseq-core" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "formatting", "local-offset", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
crossterm = "0.27"
ratatui = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"
hostname = "0.3"
tui-textarea = "0.4"
tempfile = "3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"